--- a/movie-database/package.json
+++ b/movie-database/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.62.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
