adding dependencies to deploy the project

--- a/movie-database/package.json
+++ b/movie-database/package.json
@@ -7,6 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "preview": "vite preview"
   },
   "dependencies": {
