--- a/movie-database/package.json
+++ b/movie-database/package.json
@@ -14,6 +14,7 @@
     "feather-icons-react": "^0.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-favicon": "^2.0.7",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.1.1"
   },
